--- a/web-app/package.json
+++ b/web-app/package.json
@@ -13,8 +13,11 @@
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@prisma/client": "^5.19.1",
+    "@tanstack/react-query": "^5.56.2",
     "lucide-react": "^0.428.0",
     "next": "14.2.5",
+    "prisma": "^5.19.1",
     "react": "^18",
     "react-dom": "^18"
   },
