--- a/web-app/package.json
+++ b/web-app/package.json
@@ -16,10 +16,11 @@
     "@prisma/client": "^5.19.1",
     "@tanstack/react-query": "^5.56.2",
     "lucide-react": "^0.428.0",
-    "next": "14.2.5",
+    "next": "^14.2.12",
     "prisma": "^5.19.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "resend": "^4.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
