--- a/messages-of-hope/package.json
+++ b/messages-of-hope/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@conform-to/react": "^1.6.1",
+    "@conform-to/zod": "^1.6.1",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-dialog": "^1.1.14",
@@ -29,7 +31,8 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
     "resend": "^4.5.1",
-    "tailwind-merge": "^3.3.0"
+    "tailwind-merge": "^3.3.0",
+    "zod": "^3.25.56"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
